alexDev2/force-app/main/default/objects/DXBigObject__b/DXBigObject__b.object-meta.xml
<CustomObject>
    <description>For https://app.intercom.com/a/apps/h0kayiwv/inbox/inbox/2496505/conversations/18919400017330</description>
    <label>DXBigObject</label>
    <pluralLabel>DXBigObjects</pluralLabel>
</CustomObject>