alexDev2/force-app/main/default/objects/DXBigObject__b/fields/someshorttext__c.field-meta.xml
<CustomField>
        <fullName>someshorttext__c</fullName>
        <label>someshorttext</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>