alexDev2/force-app/main/default/objects/DXBigObject__b/fields/SomeText__c.field-meta.xml
<CustomField>
        <fullName>SomeText__c</fullName>
        <label>SomeText</label>
        <length>200</length>
        <type>Text</type>
    </CustomField>